src/pages/parallax.module.css
.parallax {
  height: 100%;
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  color: rgba(0,0,0,0.90);
  font-size: 16px;
}

.parallax h2 {
  text-align:center;
}

.acting_img, .work_img, .karate_img, .dj_img {
  position: relative;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  image-orientation: from-image;
  -o-background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  /*opacity: 0.80;*/
}
.acting_img {
  background-image: url('/img/anna_gw.png');
  min-height: 500px;
}
.work_img {
  background-image: url('/img/anna_vinter.jpg');
  min-height: 400px;
}

.karate_img {
  background-image: url('/img/anna_karate.jpeg');
  min-height: 500px;
  image-orientation: from-image;
}

.dj_img {
  background-image: url('/img/djannagomez.jpg');
  min-height: 400px;
}
.headerbox {
  width: 100%;
  text-align: center;
  font-size: 50px;
  padding: 10px 0;
  background-color: rgba(255,255,255,1);
}

.headerbox .header {
  font-size: 50px;
  color: rgba(0,0,0,0.90);
  font-style: normal;
  margin: 0;
}

.headerbox p {
  font-style: italic;
  margin-top: 0;
}

.infobox {
  position: absolute;
  left: 0;
  top: 40%;
  width: 100%;
  text-align: center;
  font-size: 30px;
  color: rgba(0,0,0,1.00);
  /*opacity: 0.65;*/
}

.infobox a {
  font-weight: normal;
}

.infobox span {
  background-color: rgb(3, 43, 64);
  color: #fff;
  padding: 18px;
  font-size: 25px;
  letter-spacing: 5px;
  opacity: 0.80;
}

.infobox span:hover {
  opacity: 1;
}

.textbox {
  text-align: justify;
  background-color:rgba(255,255,255,1.00);
  padding: 50px 80px 30px;
}

.textbox .button {
  margin: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.button a:hover {
  background-color: rgb(3, 43, 64);
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  border-color: #fff;
  /*opacity: 0.80;*/
}

.button a {
  border-color: rgb(96, 104, 108);
  border-style: solid;
  border-radius: 25px;
  border-width: thin;
  padding: 10px 20px;
  font-weight: normal;
  display: flex;
  justify-content: center;
  align-items: center;
  letter-spacing: 3px;
}

.footer {
  color: rgba(255,255,255,0.90);
  padding: 30px 30px;
  text-align: justify;
  background-color: rgba(0,0,0,1.00);
}

/* Turn off parallax scrolling for tablets and phones */
@media only screen and (max-device-width: 1024px) {
  .acting_img, .work_img, .karate_img, .dj_img {
    background-attachment: scroll;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    image-orientation: from-image;
    -o-background-size: cover;
    -moz-background-size: cover;
    -webkit-background-size: cover;
  }
}

